fix word-break in badges

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,3 +23,7 @@
     text-overflow: ellipsis;
     white-space: nowrap;
 }
+
+.Badge {
+    word-break: normal;
+}
